# docs/swagger.json
@@ -665,6 +665,40 @@
                 }
             }
         },
+        "/v2/friends/friendsMap": {
+            "post": {
+                "description": "get friends with ids",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Friends"
+                ],
+                "summary": "get friends with ids",
+                "parameters": [
+                    {
+                        "description": "enter Email, Password",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.FriendsMap"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.SuccessRes"
+                        }
+                    }
+                }
+            }
+        },
         "/v2/friends/get": {
             "post": {
                 "description": "get friends",
@@ -701,7 +735,7 @@
         },
         "/v2/friends/money-friends": {
             "post": {
-                "description": "get friends with ids",
+                "description": "get money friends",
                 "consumes": [
                     "application/json"
                 ],
@@ -711,7 +745,7 @@
                 "tags": [
                     "Friends"
                 ],
-                "summary": "get friends with ids",
+                "summary": "get money friends",
                 "parameters": [
                     {
                         "description": "enter Email, Password",
@@ -719,7 +753,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/requests.FriendsMap"
+                            "$ref": "#/definitions/requests.MoneyFriends"
                         }
                     }
                 ],
